--- a/woofli_be_v2.0/woofli_front_end/content/styles/container.css
+++ b/woofli_be_v2.0/woofli_front_end/content/styles/container.css
@@ -1,4 +1,10 @@
-﻿.container--account-service {
+﻿.container__form {
+  margin-top: 20vh; }
+  @media only screen and (max-width: 767px) {
+    .container__form {
+      margin-top: 15vh; } }
+
+.container--account-service {
   height: 300px;
   max-width: 300px;
   margin: auto;
