--- a/woofli_be_v2.0/woofli_front_end/content/styles/normalize.css
+++ b/woofli_be_v2.0/woofli_front_end/content/styles/normalize.css
@@ -10,3 +10,6 @@
   border: 0;
   box-shadow: 0 4px 2px -2px gray; }
 
+.btn--form-spacing {
+  margin-top: 2vh; }
+
